--- a/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
@@ -12,8 +12,8 @@
                     <a href="@Url.Action("CreateEmployee")" class="btn btn-primary">
                         <i class="fas fa-user-plus"></i> Create Employee
                     </a>
-                    <a href="@Url.Action("CreateReview")" class="btn btn-success">
-                        <i class="fas fa-plus"></i> Create Review
+                    <a href="@Url.Action("CreateTemplateReview")" class="btn btn-success">
+                        <i class="fas fa-file-alt"></i> Create Template Review
                     </a>
                     <a href="@Url.Action("PendingReviews")" class="btn btn-warning">
                         <i class="fas fa-clipboard-check"></i> Pending Reviews
