--- a/OKRPerformanceManagement.Web/Views/Shared/_Layout.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                                     <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="Index">Manager Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="PendingReviews">My Reviews</a>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="MyPerformanceHistory">My Performance Reviews</a>
                                 </li>
                             }
                             else if (ViewBag.UserRole == "Admin")
@@ -38,13 +38,13 @@
                                     <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="Index">Admin Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="Employee" asp-action="Index">My Reviews</a>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="MyPerformanceHistory">My Performance Reviews</a>
                                 </li>
                             }
                             else
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="Employee" asp-action="Index">My Reviews</a>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Employee" asp-action="MyPerformanceHistory">My Performance Reviews</a>
                                 </li>
                             }
                         }
