Cleaned up Code and moved View Models from Controller and added them on the own Folder

--- a/OKRPerformanceManagement.Web/Views/Account/Login.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-@model OKRPerformanceManagement.Web.Controllers.LoginViewModel
+@model OKRPerformanceManagement.Web.ViewModels.LoginViewModel
 
 @{
     ViewData["Title"] = "Login";
