--- a/OKRPerformanceManagement.Web/Views/Account/Register.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-@model OKRPerformanceManagement.Web.Controllers.RegisterViewModel
+@model OKRPerformanceManagement.Web.ViewModels.RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
