--- a/OKRPerformanceManagement.Web/Views/Manager/CreateEmployee.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/CreateEmployee.cshtml
@@ -1,4 +1,4 @@
-@model OKRPerformanceManagement.Web.Controllers.CreateEmployeeViewModel
+@model OKRPerformanceManagement.Web.ViewModels.CreateEmployeeViewModel
 @{
     ViewData["Title"] = "Create Employee";
     Layout = "~/Views/Shared/_Layout.cshtml";
