--- a/OKRPerformanceManagement.Web/Views/Manager/CreateTemplateReview.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/CreateTemplateReview.cshtml
@@ -1,4 +1,4 @@
-@model OKRPerformanceManagement.Models.CreateTemplateReviewViewModel
+@model OKRPerformanceManagement.Web.ViewModels.CreateTemplateReviewViewModel
 
 @{
     ViewData["Title"] = "Create Template-Based Review";
