--- a/OKRPerformanceManagement.Web/Views/Admin/EditEmployee.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Admin/EditEmployee.cshtml
@@ -1,6 +1,6 @@
-@model OKRPerformanceManagement.Web.ViewModels.CreateEmployeeViewModel
+@model OKRPerformanceManagement.Web.ViewModels.EditEmployeeViewModel
 @{
-    ViewData["Title"] = "Create Employee";
+    ViewData["Title"] = "Edit Employee";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3 mb-0 text-gray-800">Create New Employee</h1>
+                <h1 class="h3 mb-0 text-gray-800">Edit Employee</h1>
                 <a href="@Url.Action("Index")" class="btn btn-secondary">
                     <i class="fas fa-arrow-left"></i> Back to Dashboard
                 </a>
@@ -23,7 +23,9 @@
                     <h6 class="m-0 font-weight-bold text-primary">Employee Information</h6>
                 </div>
                 <div class="card-body">
-                    <form asp-action="CreateEmployee" method="post">
+                    <form asp-action="EditEmployee" method="post">
+                        <input asp-for="Id" type="hidden" />
+                        
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -51,16 +53,6 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label asp-for="Password" class="form-label">Password *</label>
-                                    <input asp-for="Password" type="password" class="form-control" placeholder="Enter password" />
-                                    <span asp-validation-for="Password" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
                                     <label asp-for="Role" class="form-label">Role *</label>
                                     <select asp-for="Role" class="form-control">
                                         <option value="">Select Role</option>
@@ -73,6 +65,9 @@
                                     <span asp-validation-for="Role" class="text-danger"></span>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Position" class="form-label">Position *</label>
@@ -80,9 +75,6 @@
                                     <span asp-validation-for="Position" class="text-danger"></span>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="RoleId" class="form-label">Employee Role</label>
@@ -96,6 +88,9 @@
                                     <span asp-validation-for="RoleId" class="text-danger"></span>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label asp-for="ManagerId" class="form-label">Manager</label>
@@ -109,11 +104,22 @@
                                     <span asp-validation-for="ManagerId" class="text-danger"></span>
                                 </div>
                             </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <div class="form-check mt-4">
+                                        <input asp-for="IsActive" class="form-check-input" type="checkbox" />
+                                        <label asp-for="IsActive" class="form-check-label">
+                                            Active Employee
+                                        </label>
+                                    </div>
+                                    <span asp-validation-for="IsActive" class="text-danger"></span>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group mt-4">
                             <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-save"></i> Create Employee
+                                <i class="fas fa-save"></i> Update Employee
                             </button>
                             <a href="@Url.Action("Index")" class="btn btn-secondary">
                                 <i class="fas fa-times"></i> Cancel
