Created Avatar, and make the option there Functional

--- a/OKRPerformanceManagement.Web/Views/Home/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Home/Index.cshtml
@@ -227,7 +227,7 @@ else
                             <a href="@Url.Action("CreateEmployee", "Admin")" class="btn btn-success btn-lg btn-block mb-2">Create Employee</a>
                         </div>
                         <div class="col-md-3">
-                            <a href="@Url.Action("ManageRoles", "Admin")" class="btn btn-info btn-lg btn-block mb-2">Manage Roles</a>
+                            <a href="@Url.Action("Index", "Admin")" class="btn btn-info btn-lg btn-block mb-2">Manage Roles</a>
                         </div>
                         <div class="col-md-3">
                             <a href="@Url.Action("Index", "Admin")" class="btn btn-warning btn-lg btn-block mb-2">My Reviews</a>
