--- a/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
@@ -9,9 +9,6 @@
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="h3 mb-0 text-gray-800">Manager Dashboard</h1>
                 <div>
-                    <a href="@Url.Action("CreateEmployee")" class="btn btn-primary">
-                        <i class="fas fa-user-plus"></i> Create Employee
-                    </a>
                     <a href="@Url.Action("CreateTemplateReview")" class="btn btn-success">
                         <i class="fas fa-file-alt"></i> Create Template Review
                     </a>
@@ -62,7 +59,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                My Team Members
+                                Team Members
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TeamMembers.Count</div>
                         </div>
@@ -133,8 +130,11 @@
     <div class="row">
         <div class="col-12">
             <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">My Team Members</h6>
+                <div class="card-header py-3 d-flex justify-content-between align-items-center">
+                    <h6 class="m-0 font-weight-bold text-primary">Team Members</h6>
+                    <a href="@Url.Action("CreateEmployee")" class="btn btn-sm btn-primary">
+                        <i class="fas fa-user-plus"></i> Create Employee
+                    </a>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -175,12 +175,6 @@
                                         <td>
                                             <a href="@Url.Action("EditEmployee", new { id = member.Id })" class="btn btn-sm btn-warning">
                                                 <i class="fas fa-edit"></i> Edit
-                                            </a>
-                                            <a href="@Url.Action("ReviewEmployee", new { id = member.Id })" class="btn btn-sm btn-primary">
-                                                <i class="fas fa-eye"></i> Review
-                                            </a>
-                                            <a href="@Url.Action("ViewOKR", new { id = member.Id })" class="btn btn-sm btn-info">
-                                                <i class="fas fa-clipboard-list"></i> View OKR
                                             </a>
                                             <button type="button" class="btn btn-sm btn-danger" onclick="confirmDelete(@member.Id, '@member.FirstName', '@member.LastName')">
                                                 <i class="fas fa-trash"></i> Delete
